bank-app/app/namespace-bank-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-app
  labels:
    name: production
