bank-app/app/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bank-app
  name: bank-ingress-resource
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: SSL Certificate ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600

spec:
  ingressClassName: alb
  rules:
    - host: bank.spontansolutions.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bank-app-service
              port:
                number: 80
